@@ -1,3 +1,8 @@
+2008-03-05  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/twisted/compat.py: Print a warning when imported, so
+	extenal modules depend on it can be migrated.
+
 2008-03-05  Arek Korbik  <arkadini@gmail.com>
 
 	* flumotion/component/misc/httpserver/httpserver.py:
